fixing overlaping class of .title in nav

--- a/public/stylesheets/nav.css
+++ b/public/stylesheets/nav.css
@@ -103,19 +103,19 @@
     -webkit-transform: rotate(45deg) translate(-8px, -8px) ;
     transform: rotate(45deg) translate(-8px, -8px) ;
 }
-.title{
+.title-nav{
 	width:110px;
 	display:none;
 	margin-left:auto;
 	margin-right:auto;
 }
-.title h1{
+.title-nav h1{
 	margin-top:5px;
 }
-.title h1 a{
+.title-nav h1 a{
 	color:white;
 }
-.title h1 a:hover{
+.title-nav h1 a:hover{
 	text-decoration: none;
 }
 .lu-monogram-nav{
@@ -161,7 +161,7 @@
 	.menu-icon{
 		display:inline-block;
 	}
-	.title{
+	.title-nav{
 		display:block;
 	}
 	.navigation .ul, .navigation ul li{
